    option in a configuration file (Closes: #747308).
  * Added Ruby bindings and the corresponding documentation
  * Dropped usage of faketime in the test suite (Closes: #747715)
  * backends/fake: output a timestamp like the ones adt-run outputs
  * Added new debci-config, a helper to output value of debci configuration
    values
  * debci-generate-feeds: added generation of per-package Atom feeds. Called
    from debci-batch
  * public/font-awesome, debian/copyright: embedding a copy of FontAwesome,
    which is, erm, awesome.
  * public/app.js: add a link to the per-package Atom feed
  * public/style.css: make the status indicators use FontAwesome icons

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 11 May 2014 18:35:05 -0300

debci (0.5.2) unstable; urgency=medium

  * scripts/process-package: skip blame check without a dependencies diff
  * lib/*.sh: guard `set -eu` to avoid doing that on interactive shells
  * lib/functions.sh: fix list_binaries to work against the sources index
    - This fixes listing binaries coming from packages that were binNMUed

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 05 Apr 2014 20:03:22 -0300

debci (0.5.1) unstable; urgency=medium

  * etc/schroot/debci/fstab: improve schroot isolation
    - do not share /tmp with host
    - mount tmpfs at /dev/shm as quite some software needs it
  * test_shell_best_practices.sh: skip when checkbashisms is not available.
    - You don't want to install devscripts and all its dependencies when
      running as-installed tests
    - checking for best practices is only useful in development environments.
  * Use unified diff in "Change in the base system since last run"
  * debian/source/options: fix to include publib/data in the source tarball,
    but not data/*

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 01 Apr 2014 12:23:15 -0300

debci (0.5.0) unstable; urgency=medium

  [ Martin Pitt ]
  * Add missing dctrl-tools dependency.