@@ -8,11 +8,33 @@ require 'debci'
 repository = Debci::Repository.new
 
 feeds_dir = File.join(Debci.config.data_basedir, 'feeds')
-site_base = 'http://ci.debian.net' # FIXME read this from configuration
+$site_base = 'http://ci.debian.net' # FIXME read this from configuration
 
 FileUtils.mkdir_p(feeds_dir)
 
 past_timestamp = Time.parse('2014-05-10T21:17:00 UTC')
+
+def insert_items(news, feed)
+  news.each do |status|
+    feed.items.new_item do |item|
+      prefix = status.package.sub(/^((lib)?.).*/, '\1')
+      item.link = $site_base + '/#package/' + status.package
+      item.title = status.headline
+      item.date = status.date
+      item.description = [
+        "<p>#{status.description}</p>",
+        '<ul>',
+        "<li>Version: #{status.version}</li>",
+        "<li>Date: #{status.date}</li>",
+        "<li><a href=\"#{$site_base}/data/#{status.suite}-#{status.architecture}/packages/#{prefix}/#{status.package}/#{status.run_id}.log\">debci log</a></li>",
+        "<li><a href=\"#{$site_base}/data/#{status.suite}-#{status.architecture}/packages/#{prefix}/#{status.package}/#{status.run_id}.autopkgtest.log\">autopkgtest log</a></li>",
+        "<li><a href=\"#{$site_base}/data/#{status.suite}-#{status.architecture}/autopkgtest/#{prefix}/#{status.package}/#{status.run_id}/\">autopkgtest artifacts</a></li>",
+        status.status == :fail && "<li>Packages blamed: #{status.blame.join(', ')}</a></li>" || nil,
+        '</ul>',
+      ].compact.join("\n")
+    end
+  end
+end
 
 repository.packages.each do |pkg|
   news = repository.news_for(pkg)
@@ -23,30 +45,25 @@ repository.packages.each do |pkg|
   feed = RSS::Maker.make('atom') do |feed|
     feed.channel.author = 'Debian Continuous Integration'
     feed.channel.updated = news.first && news.first.date || past_timestamp
-    feed.channel.about = site_base + '/#package/' + pkg
+    feed.channel.about = $site_base + '/#package/' + pkg
     feed.channel.title = pkg + ' CI news feed'
 
-    news.each do |status|
-      feed.items.new_item do |item|
-        item.link = site_base + '/#package/' + pkg
-        item.title = status.headline
-        item.date = status.date
-        item.description = [
-          "<p>#{status.description}</p>",
-          '<ul>',
-          "<li>Version: #{status.version}</li>",
-          "<li>Date: #{status.date}</li>",
-          "<li><a href=\"#{site_base}/data/#{status.suite}-#{status.architecture}/packages/#{prefix}/#{pkg}/#{status.run_id}.log\">debci log</a></li>",
-          "<li><a href=\"#{site_base}/data/#{status.suite}-#{status.architecture}/packages/#{prefix}/#{pkg}/#{status.run_id}.autopkgtest.log\">autopkgtest log</a></li>",
-          "<li><a href=\"#{site_base}/data/#{status.suite}-#{status.architecture}/autopkgtest/#{prefix}/#{pkg}/#{status.run_id}/\">autopkgtest artifacts</a></li>",
-          status.status == :fail && "<li>Packages blamed: #{status.blame.join(', ')}</a></li>" || nil,
-          '</ul>',
-        ].compact.join("\n")
-      end
-    end
+    insert_items(news, feed)
   end
 
   File.open(feedfile, 'w') do |f|
     f.write(feed.to_s.gsub('<summary>', '<summary type="html">'))
   end
+end
+
+global_news = repository.news_for('*', 50)
+global_feed = RSS::Maker.make('atom') do |feed|
+  feed.channel.author = 'Debian Continuous Integration'
+  feed.channel.updated = global_news.first && global_news.first.date || past_timestamp
+  feed.channel.about = $site_base
+  feed.channel.title = 'Debian Continuous Integration news'
+  insert_items(global_news, feed)
+end
+File.open(File.join(feeds_dir, 'all-packages.xml'), 'w') do |f|
+  f.write(global_feed.to_s.gsub('<summary>', '<summary type="html">'))
 end
